# videocp

./: .gitignore  README.md  config.yaml  pyproject.toml  tasks.yaml  yt-shorts.yaml
tests/: test_batch.py  test_bbdown.py  test_browser_runtime.py  test_candidates.py  test_cdp_publisher.py  test_config.py  test_downloader_plans.py  test_fixture_extraction.py  test_input_parser.py  test_integration.py  test_profile.py  test_providers.py  test_publisher.py  test_sync.py  test_sync_reuse.py
tests/fixtures/: network_events.json
videocp/: __init__.py  __main__.py  app.py  bbdown.py  browser.py  cdp_publisher.py  cli.py  config.py  doctor.py  downloader.py  errors.py  extractor.py  input_parser.py  models.py  profile.py  profile_expander.py  providers.py  publisher.py  runtime_log.py  sync.py  sync_history.py  youtube_publisher.py  ytdlp.py
